changed requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,173 @@
-absl-py==0.10.0
-jax==0.1.76
-jaxlib==0.1.55
-matplotlib==3.3.1
-numpy==1.19.2
-scikit-learn==0.23.2
-scipy==1.5.2
-statsmodels==0.12.0
-tqdm==4.49.0
+absl-py 
+alabaster==0.7.12
+appnope
+asn1crypto
+astor==0.8.1
+async-generator==1.10
+attrs
+Babel==2.9.0
+backcall==0.2.0
+bleach
+brotlipy==0.7.0
+c-lasso==1.0.8
+CacheControl
+cached-property==1.5.2
+certifi==2020.12.5
+cffi==1.14.5
+chardet
+cryptography==2.3.1
+cvxpy==1.1.12
+cycler==0.10.0
+Cython
+decorator==4.4.2
+deepiv
+defusedxml==0.6.0
+dirichlet==0.9
+docutils==0.16
+ecopy==0.1.2.2
+ecos==2.0.7.post1
+entrypoints==0.3
+et-xmlfile==1.0.1
+gast==0.2.2
+google-pasta==0.2.0
+grpcio==1.34.0
+h5py==3.1.0
+hdmedians
+idna
+imagesize==1.2.0
+importlib-metadata
+iniconfig
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+jax
+jaxlib
+jdcal==1.4.1
+jedi
+Jinja2==2.11.2
+joblib
+jsonschema
+jupyter==1.0.0
+jupyter-client
+jupyter-console
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab-pygmentsKeras==2.0.6
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver
+latexcodec==2.0.1
+linearmodels==4.24
+llvmlite==0.36.0
+lockfile==0.12.2
+logging==0.4.9.6
+lxml==4.6.3
+Markdown==3.3.3
+MarkupSafe==1.1.1
+matplotlib
+mistune==0.8.4
+mkl-fft==1.0.12
+mkl-random==1.0.2
+mkl-service==2.3.0
+more-itertools
+mpltern==0.3.2
+mpmath==1.1.0
+msgpack
+mypy-extensions==0.4.3
+natsort
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+notebook==6.0.3
+numba==0.53.1
+numpy==1.20.1
+numpydoc==1.1.0
+olefile==0.46
+openpyxl==3.0.6
+opt-einsum==3.3.0
+osqp==0.6.2.post0
+packagingpandas==1.1.5
+pandocfilters
+parso==0.7.0
+pathlib==1.0.1
+patsy==0.5.1
+periodictable==1.5.3
+pexpect
+picklesharePillow
+plotly
+pluggy
+prometheus-client
+prompt-toolkit
+property-cached==1.6.4
+protobuf==3.14.0
+psutil==5.8.0
+ptyprocesspy
+pybtex==0.24.0
+pybtex-docutils==1.0.0
+pycparser
+Pygments
+pyhdfe==0.1.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.7
+pyrolite==0.2.8
+pyrsistent
+PySocks
+pytest==6.2.3
+python-dateutil==2.8.1
+pytz @ file:///tmp/build/80754af9/pytz_1608922264688/work
+PyYAML==5.3.1
+pyzmq==20.0.0
+qdldl==0.1.5.post0
+qtconsole
+QtPy==1.9.0
+quantecon==0.5.0
+requests
+retrying==1.3.3
+rpy2==3.4.3
+scikit-bio
+scikit-learn
+scipy
+scs==2.1.3
+seaborn
+Send2Trash
+six
+sklearn==0.0
+snowballstemmer==2.1.0
+Sphinx==3.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-bibtex==2.3.0
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+statsmodels
+sympy==1.7.1
+tensorboard==1.15.0
+tensorflow==1.15.0
+tensorflow-estimator==1.15.1
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+Theano==1.0.5
+threadpoolctl
+tinydb==4.3.0
+toml
+tornado
+tqdm
+traitlets
+tzlocal==2.1
+urllib3
+wcwidth
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+xlrd==2.0.1
+zipp
